# xiaomi_pc_manager_lite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_en.md  index.html  package.json  pnpm-lock.yaml  problems.md  refactor-plan.md  remaining-works.md  tsconfig.json  xiaomi_pc_manager_lite.sln
docs/: functional-requirements.md
src/: App.svelte  command.rs  embed.rs  fnkey.rs  main.rs  msg_window.rs  msg_worker.rs  power_event.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  embed.rs  hotkey.rs  lib.rs  main.rs  power_event.rs  tray.rs
src-tauri/src/ec/: backend.rs  config.rs  error.rs  winring0.rs  wmi.rs
src-tauri/src/gui/: app.rs
src/ec/: backend.rs  battery.rs  config.rs  error.rs  fnkey.rs  mod.rs  performance.rs  winring0.rs  wmi.rs  wmi_util.rs
src/gui/: app.rs  commands.rs  mod.rs  view.rs
src/lib/: BatteryCare.svelte  EcStatus.svelte  PerformanceMode.svelte  SettingsPanel.svelte  TitleBar.svelte
src/styles/: global.css
src/tray/: mod.rs  worker.rs
x64/Debug/: xiaomi_pc_manager_lite_config.ini
xiaomi_pc_manager_lite/: main.cpp  main_clean.cpp  resource.h  xiaomi_pc_manager_lite.rc  xiaomi_pc_manager_lite.vcxproj  xiaomi_pc_manager_lite.vcxproj.filters
xiaomi_pc_manager_lite/WinRing0/: RCa14392  WinRing0.vcproj
xiaomi_pc_manager_lite/x64/Debug/: vc143.idb  xiaomi_pc_manager_lite.exe.recipe  xiaomi_pc_manager_lite.ilk  xiaomi_pc_manager_lite.res
xiaomi_pc_manager_lite/x64/Debug/xiaomi_p.1ff3a768.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  xiaomi_pc_manager_lite.lastbuildstate
