[package]
name = "xiaomi-pc-manager-lite"
version = "0.2.0"
edition = "2021"
description = "Xiaomi PC Manager Lite - Battery care / Performance mode"

[dependencies]
eframe = "0.31"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
dirs = "6"
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
rust-embed = "8"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Wmi",
    "Win32_System_Ole",
    "Win32_System_Power",
    "Win32_System_Services",
]}
