[package]
name = "xiaomi-pc-manager-lite"
version = "0.1.0"
edition = "2021"
description = "Xiaomi PC Manager Lite - Battery care / Performance mode"

[lib]
name = "xiaomi_pc_manager_lite_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["tray-icon", "wry", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
dirs = "6"
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
rust-embed = "8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Wmi",
    "Win32_System_Ole",
]}
